@@ -1,3 +1,8 @@
+2007-10-26 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/peeph.def: moved rules 257.x to 253.x and re-enabled 253.b
+	* support/regression/tests/bug1721024.c:new, added
+
 2007-10-25 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/tests/bug1816470.c: new, added
